# Cover-Letter-Generator

./: README.md  pyproject.toml
cover_letter_generator/: __init__.py  app.py  main.py
cover_letter_generator/gui/: __init__.py  main_window.py
cover_letter_generator/models/: __init__.py  text_parts.py
cover_letter_generator/services/: cover_letter_service.py  json_data_store.py
data/: settings.json  techs.json  text_parts.json
tests/: test_cover_letter_service.py  test_json_data_store.py  test_text_parts.py
